--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "This is a simple html css js component made as an assignment for Flarmio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx vite"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0",
     "vite": "^6.0.1"
   },
   "repository": {
